--- a/public/test-client/braid-client.html
+++ b/public/test-client/braid-client.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 	<style>
+		body {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 10px;
+			font-size: 14pt;
+		}
 		section {
 			margin:5px;
 			padding: 10px;
@@ -12,7 +18,12 @@
 	</style>
 	<script src='braid-client-web.js'></script>
 	<script>
-		var braidClient = new BraidClient("127.0.0.1", 25555);
+		var getLocation = function(href) {
+    		var l = document.createElement("a");
+    		l.href = href;
+    		return l;
+		};
+		var braidClient = new BraidClient(getLocation(document.location).hostname, 25555);
 		var connected = false;
 		
 		function getElement(id) {
@@ -98,7 +109,7 @@
 	</script>
 </head>
 <body style='font-family:sans-serif;font-size:10pt;'>
-	<h1>Braid Client</h1>
+	<h1>Braid Test Client</h1>
 	<section>
 		<h3>Hello</h3>
 		<p>		
