More tweaks to UI

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Braid Protocol</title>
+		<title>Braid Server</title>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="braid.css">
 	</head>
 	<body>
 		<h1>Braid</h1>
-		<p>This server is running <a href='https://github.com/kduffie/braid-server' target="_blank">braid-server</a>.</p>
+		<p>This server is running <a href='https://github.com/kduffie/braid-server' target="_blank">braid-server</a> version 0.2.1.</p>
 		
 		<p>Braid servers connect clients running multi-user collaborative apps.  These apps can
 		run on virtually any device and interoperate with anyone else on this or any other reachable
@@ -16,7 +16,7 @@
 		
 		<p>Braid can be used on public or private networks.  It is designed
 		to federate, so that users in different domains using different servers can work
-		together.  (Note that federation is not yet enabled.)</p>
+		together.</p>
 		
 		<p>To exercise the basic functionality of this braid server, try the <a href='test-client/braid-client.html'>test client</a>.</p>		
 		<p>Open your browser's inspector to see the messages exchanged between this web client and the server over a braid socket.</p>
