Federated ping working!

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>Braid</h1>
-		<p>This server is running <a href='https://github.com/kduffie/braid-server' target="_blank">braid-server</a> version 0.2.1.</p>
+		<p>This server is running <a href='https://github.com/kduffie/braid-server' target="_blank">braid-server</a></p>
 		
 		<p>Braid servers connect clients running multi-user collaborative apps.  These apps can
 		run on virtually any device and interoperate with anyone else on this or any other reachable
