Clean up client

--- a/public/test-client/braid-client.html
+++ b/public/test-client/braid-client.html
@@ -31,6 +31,8 @@
 			margin: 5px 0;
 		}
 	</style>
+	<script src='braid-address.js'></script>
+	<script src='braid-factory.js'></script>
 	<script src='braid-client-web.js'></script>
 	<script>
 		var getLocation = function(href) {
