--- a/public/test-client/braid-client.html
+++ b/public/test-client/braid-client.html
@@ -43,7 +43,7 @@
 	</style>
 	<script src='braid-address.js'></script>
 	<script src='braid-factory.js'></script>
-	<script src='braid-client-web.js'></script>
+	<script src='braid-client.js'></script>
 	<script>
 		var getLocation = function(href) {
     		var l = document.createElement("a");
