--- a/fed_public/index.html
+++ b/fed_public/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Braid Server</title>
+		<title>Braid Server: Federation</title>
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="braid.css">
 	</head>
 	<body>
-		<h1>Braid</h1>
+		<h1>Braid: Federation</h1>
 		<p>This server is running <a href='https://github.com/BraidApps/braid-server' target="_blank">braid-server</a></p>
 		
 		<p>Braid servers connect clients running multi-user collaborative apps.  These apps can
@@ -18,8 +18,6 @@
 		to federate, so that users in different domains using different servers can work
 		together.</p>
 		
-		<p>To exercise the basic functionality of this braid server, try the <a href='test-client/braid-client.html'>test client</a>.</p>		
-		<p>Open your browser's inspector to see the messages exchanged between this web client and the server over a braid socket.</p>
-	
+		<p>This port is used for federating between servers.</p>	
 	</body>
 </html>
